--- a/photo-backend/Persistance/App.config
+++ b/photo-backend/Persistance/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="PhotoEndProjectEntities" connectionString="metadata=res://*/Photo.csdl|res://*/Photo.ssdl|res://*/Photo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MPGCD2VV\SQLEXPRESS;initial catalog=PhotoEndProject;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
